--- a/JSPPrj/WebContent/calc3.html
+++ b/JSPPrj/WebContent/calc3.html
@@ -28,13 +28,13 @@
 				<td><input type="submit" name="operator" value="CE" /></td>
 				<td><input type="submit" name="operator" value="C" /></td>
 				<td><input type="submit" name="operator" value="지우기" /></td>
-				<td><input type="submit" name="operator" value="÷" /></td>
+				<td><input type="submit" name="operator" value="/" /></td>
 			</tr>
 			<tr>
 				<td><input type="submit" name="value" value="7" /></td>
 				<td><input type="submit" name="value" value="8" /></td>
 				<td><input type="submit" name="value" value="9" /></td>
-				<td><input type="submit" name="operator" value="X" /></td>
+				<td><input type="submit" name="operator" value="*" /></td>
 			</tr>
 			<tr>
 				<td><input type="submit" name="value" value="4" /></td>
